# toolbox-for-ASR-and-TTS

./: README.md
tts-service/: API_DOCUMENTATION.md  DOCKER_RUN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  start.py  test.py
tts-service/app/: __init__.py  main.py
tts-service/app/api/: __init__.py  tts.py
tts-service/app/models/: __init__.py  tts.py
tts-service/app/services/: __init__.py  tts_service.py
voice-service/: .dockerignore  .gitignore  ASR音频累积优化方案分析.md  Dockerfile  README.md  check_modelscope_cache.py  docker-compose.yml  full_voice_demo.py  myLLM.py  start.py
voice-service/app/: config.py  main.py
voice-service/app/api/: voice.py
voice-service/app/models/: voice.py
voice-service/app/services/: LLM_functions.py  full_hotwords.py  hg_deepseek.py  hotwords.txt  voice_interface.py  voice_service.py
voice-service/config/: logging.template.yaml  settings.yaml
